# grpc-template

./: .gitignore  NOTES.md  README.md  _grpcenv-project.sh  _grpcenv.sh  grpcenv-project.sh  grpcenv.sh
_bin/: reset.sh  setup.sh
_template/: .gitignore  _grpcenv.sh
_template/etc/: env.sh  versions
_template/node/: package-lock.json
_template/node-examples/: package-lock.json  package.json
_template/node-examples/src/: client.js
_template/protos/grpc_template/v0/: hello.proto
_template/python-examples/: client.py  pyproject.toml
_template/web/: index.js
_template/web+dts/: package-lock.json  package.json
_template/web+dts/grpc_template/v0/: hello_grpc_web_pb.d.ts  hello_pb.d.ts
_template/web+typescript/: package.json
_template/web+typescript/grpc_template/v0/: HelloServiceClientPb.ts
_template/web-example/: package-lock.json  package.json
_template/web-example/src/: index.html  index.js
_template/web/grpc_template/v0/: hello_grpc_web_pb.js  hello_pb.js
envoy-proxy/: compose.yaml  envoy.yaml
java/: pom.xml
java-client/: pom.xml
java-examples/: pom.xml
java-server/: pom.xml
node/: .gitignore  index.js  package-lock.json  package.json
node-examples/: package-lock.json
protos/template_grpc/v0/: hello.proto
python/: pyproject.toml
python-examples/: client.py  pyproject.toml
python/src/grpc_template/v0/: hello_pb2.py  hello_pb2.pyi  hello_pb2_grpc.py
python/src/template_grpc/v0/: hello_pb2.py  hello_pb2_grpc.py
web/: package.json
web-example/: .gitignore  package-lock.json  webpack.config.js
(+15 files in other folders)
