[tool.poetry]
name = "grpc-template-client"
version = "0.0.1"
description = ""
authors = ["Shahim Essaid <shahim@essaid.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
grpc-template = {path = "../python"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
