[tool.poetry]
name = "template-grpc"
version = "0.0.1"
description = ""
authors = ["Shahim Essaid <shahim@essaid.com>"]
readme = "README.md"
packages = [
    {include = "template_grpc",  from = "src"}
]

[tool.poetry.dependencies]
python = "^3.7"
grpcio = "^1.58.0"
protobuf = "^4.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
